@@ -74,11 +74,13 @@
 /********************************************************************/
 unsigned char *joesep(unsigned char *path)
 {
+#ifdef __MSDOS__
 	int x;
 
 	for (x = 0; path[x]; ++x)
 		if (path[x] == '\\')
 			path[x] = '/';
+#endif
 	return path;
 }
 /********************************************************************/
