@@ -125,6 +125,22 @@ unsigned char *get_context(BW *bw)
 	return buf1;
 }
 
+unsigned char *duplicate_backslashes(unsigned char *s, int len)
+{
+	unsigned char *m;
+	int x, count;
+	for (x = count = 0; x != len; ++x)
+		if (s[x] == '\\')
+			++count;
+	m = vsmk(len + count);
+	for (x = 0; x != len; ++x) {
+		m = vsadd(m, s[x]);
+		if (s[x] == '\\')
+			m = vsadd(m, '\\');
+	}
+	return m;
+}
+
 /* static */unsigned char *stagen(unsigned char *stalin, BW *bw, unsigned char *s, int fill)
 {
 	unsigned char buf[80];
@@ -174,34 +190,35 @@ unsigned char *get_context(BW *bw)
 					stalin = vsncpy(sv(stalin), d + 13, 3);
 				}
 				break;
-			    case 'd':
+			case 'd':
 				{
-				int l;
-				if (s[1]) switch (*++s) {
-					case 'd' : sprintf(buf,"%02d",cas->tm_mday); break;
-					case 'm' : sprintf(buf,"%02d",cas->tm_mon + 1); break;
-					case 'y' : sprintf(buf,"%02d",cas->tm_year % 100); break;
-					case 'Y' : sprintf(buf,"%04d",cas->tm_year + 1900); break;
-					case 'w' : sprintf(buf,"%d",cas->tm_wday); break;
-					case 'D' : sprintf(buf,"%03d",cas->tm_yday); break;
-					default : buf[0]='d'; buf[1]=*s; buf[2]=0;
+					int l;
+					if (s[1]) switch (*++s) {
+						case 'd' : sprintf(buf,"%02d",cas->tm_mday); break;
+						case 'm' : sprintf(buf,"%02d",cas->tm_mon + 1); break;
+						case 'y' : sprintf(buf,"%02d",cas->tm_year % 100); break;
+						case 'Y' : sprintf(buf,"%04d",cas->tm_year + 1900); break;
+						case 'w' : sprintf(buf,"%d",cas->tm_wday); break;
+						case 'D' : sprintf(buf,"%03d",cas->tm_yday); break;
+						default : buf[0]='d'; buf[1]=*s; buf[2]=0;
+					} else {
+						buf[0]='d'; buf[1]=0;
 					}
-				else { buf[0]='d'; buf[1]=0;}
-				stalin=vsncpy(sv(stalin),sz(buf));
+					stalin=vsncpy(sv(stalin),sz(buf));
 				}
 				break;
 
-				case 'E':
+			case 'E':
 				{
-				int l;
-				char *ch;
-				buf[0]=0;
-				for(l=0;s[l+1] && s[l+1] != '%'; l++) buf[l]=s[l+1];
-				if (s[l+1]=='%' && buf[0]) {
-					buf[l]=0;
-					s+=l+1;
-					ch=getenv(buf);
-					if (ch) stalin=vsncpy(sv(stalin),sz(ch));
+					int l;
+					char *ch;
+					buf[0]=0;
+					for(l=0;s[l+1] && s[l+1] != '%'; l++) buf[l]=s[l+1];
+					if (s[l+1]=='%' && buf[0]) {
+						buf[l]=0;
+						s+=l+1;
+						ch=getenv(buf);
+						if (ch) stalin=vsncpy(sv(stalin),sz(ch));
 					} 
 				}
 				break;
@@ -242,8 +259,10 @@ unsigned char *get_context(BW *bw)
 				{
 				if (bw->b->name) {
 					unsigned char *tmp = simplify_prefix(bw->b->name);
-					stalin = vsncpy(sv(stalin), sv(tmp));
+					unsigned char *tmp1 = duplicate_backslashes(sv(tmp));
 					vsrm(tmp);
+					stalin = vsncpy(sv(stalin), sv(tmp1));
+					vsrm(tmp1);
 				} else {
 					stalin = vsncpy(sv(stalin), sz(joe_gettext(_("Unnamed"))));
 				}
