@@ -1,3 +1,7 @@
+- Allow backslashes in file names
+
+- Fix %A to print unicode
+
 - Charles Tabony's (vectorshifts's) highlighter stack patch
 
 - ! is relace all in replace prompt
